# mimo-TUI

./: .gitignore  Cargo.toml  LICENSE  MIMO_TUI_ARCHITECTURE.md  README.md
ai-prompts/: memory-refactor-prompts.md
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: engine.rs  lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: hooks.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  message.rs  session.rs  tool.rs
docs/: MEMORY.md  SUBAGENT_PROMPTS.md  TUI_DEVELOPMENT_PROMPTS.md
docs/tui-prompts/: 00-项目总览.md  01-事件循环与终端生命周期.md  02-分屏布局系统.md  03-输入组件.md  04-消息渲染组件.md  05-Chat视图集成MiMo引擎.md  06-记忆系统集成.md  07-命令处理系统.md  08-流式响应与打字机效果.md  09-子智能体监控视图.md  10-会话历史视图.md  11-审批交互界面.md  12-标题栏与状态栏.md  13-键盘导航与滚动.md  14-配置管理与环境变量.md  15-错误处理与用户反馈.md
