[workspace]
members = [
    "packages/core",
    "packages/providers",
    "packages/apps/cli",
    "packages/apps/tui",
    "crates/types",
    "crates/config",
    "crates/hooks",
    "crates/execpolicy",
]
default-members = ["packages/apps/cli", "packages/apps/tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mimo/mimo-tui"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
form_urlencoded = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
