[package]
name = "mimo-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for MiMo-TUI"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.9"
dirs.workspace = true
