[package]
name = "mimo-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lifecycle hooks for MiMo-TUI"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
