[package]
name = "mimo-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for MiMo-TUI"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
